--- a/templates/register.html
+++ b/templates/register.html
@@ -7,27 +7,26 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index_styles.css') }}">
 </head>
 <body>
+    <!-- POPRAWIONY: Jeden container bez zagnieżdżonych divów -->
     <div class="login-container">
-        <div class="login-card">
-            <h1>Rejestracja</h1>
-            <form id="registerForm">
-                <div class="form-group">
-                    <label for="username">Nazwa użytkownika:</label>
-                    <input type="text" id="username" name="username" required autocomplete="username">
-                </div>
-                <div class="form-group">
-                    <label for="password">Hasło:</label>
-                    <input type="password" id="password" name="password" required autocomplete="new-password">
-                    <small style="display: block; margin-top: 5px; color: var(--text-secondary);">
-                        Hasło musi zawierać minimum 8 znaków, dużą literę, cyfrę i znak specjalny.
-                    </small>
-                </div>
-                <button type="submit" class="btn btn-primary">Zarejestruj się</button>
-                <div id="status" style="display: none;"></div>
-            </form>
-            <div class="login-link">
-                Masz już konto? <a href="/">Zaloguj się</a>
+        <h1>Rejestracja</h1>
+        <form id="registerForm">
+            <div class="form-group">
+                <label for="username">Nazwa użytkownika:</label>
+                <input type="text" id="username" name="username" required autocomplete="username">
             </div>
+            <div class="form-group">
+                <label for="password">Hasło:</label>
+                <input type="password" id="password" name="password" required autocomplete="new-password">
+                <small style="display: block; margin-top: 5px; color: #CCCCCC;">
+                    Hasło musi zawierać minimum 8 znaków, dużą literę, cyfrę i znak specjalny.
+                </small>
+            </div>
+            <button type="submit" class="btn btn-primary">Zarejestruj się</button>
+            <div id="status" style="display: none;"></div>
+        </form>
+        <div class="login-link">
+            Masz już konto? <a href="/">Zaloguj się</a>
         </div>
     </div>
 
