--- a/templates/chat.html
+++ b/templates/chat.html
@@ -19,10 +19,9 @@
                     <button id="add-friend-btn" class="btn btn-primary">
                         <i class="fas fa-user-plus"></i> Dodaj
                     </button>
-                    <button id="/logout" class="btn btn-danger">
+                    <a href="/logout" class="btn btn-danger">
                         <i class="fas fa-sign-out-alt"></i> Wyloguj
-                    </button>
-                </div>
+                    </a>
             </div>
             
             <div class="friends-section">
