--- a/templates/chat.html
+++ b/templates/chat.html
@@ -19,9 +19,10 @@
                     <button id="add-friend-btn" class="btn btn-primary">
                         <i class="fas fa-user-plus"></i> Dodaj
                     </button>
-                    <a href="/logout" class="btn btn-danger">
+                    
+                    <button onclick="window.location.href='/logout'" class="btn btn-danger">
                         <i class="fas fa-sign-out-alt"></i> Wyloguj
-                    </a>
+                    </button>
             </div>
             
             <div class="friends-section">
