--- a/static/css/app.css
+++ b/static/css/app.css
@@ -43,6 +43,9 @@ body {
   height: 100vh;
   width: 100vw;
   flex-direction: row;
+  display: grid !important;
+  grid-template-columns: 320px 1fr !important;
+  height: 100vh !important;
 }
 
 /* === SIDEBAR === */
