--- a/templates/chat.html
+++ b/templates/chat.html
@@ -23,6 +23,7 @@
                     <button onclick="window.location.href='/logout'" class="btn btn-danger">
                         <i class="fas fa-sign-out-alt"></i> Wyloguj
                     </button>
+                </div>
             </div>
             
             <div class="friends-section">
